Modules/vpc/vpc.tf
# VPC
resource "aws_vpc" "vpc" {
  cidr_block           = var.cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags                 = merge(local.common-tag, { Name : "${local.common-tag.environment}-vpc" })
}
